@@ -1,5 +1,9 @@
 #############################################################################
 # Makefile for building: prank
+# Generated by qmake (2.01a) (Qt 4.8.4) on: Tue Jun 3 17:11:19 2014
+# Project:  prank.pro
+# Template: app
+# Command: /usr/bin/qmake-qt4 -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
 #############################################################################
 
 ####### Compiler, tools and options
@@ -7,14 +11,15 @@
 CC            = gcc
 CXX           = g++
 DEFINES       = 
-CFLAGS        = -m64 -pipe -O3 $(DEFINES)
-CXXFLAGS      = -m64 -pipe -O3 $(DEFINES)
-INCPATH       = -I. -I/usr/include
+CFLAGS        = -m64 -pipe -g $(DEFINES)
+CXXFLAGS      = -m64 -pipe -g $(DEFINES)
+INCPATH       = -I/usr/share/qt4/mkspecs/linux-g++-64 -I. -I/usr/include
 LINK          = g++
 LFLAGS        = -m64
 LIBS          = $(SUBLIBS)    
 AR            = ar cqs
 RANLIB        = 
+QMAKE         = /usr/bin/qmake-qt4
 TAR           = tar -cf
 COMPRESS      = gzip -9f
 COPY          = cp -f
@@ -31,7 +36,6 @@ DEL_DIR       = rmdir
 MOVE          = mv -f
 CHK_DIR_EXISTS= test -d
 MKDIR         = mkdir -p
-POD2MAN       = pod2man --utf8 --center "The Probabilistic Alignment Kit" -release="v.121211"
 
 ####### Output directory
 
@@ -105,10 +109,24 @@ OBJECTS       = writefile.o \
 		exonerate_reads.o \
 		mafft_alignment.o \
 		bppancestors.o
+DIST          = /usr/share/qt4/mkspecs/common/unix.conf \
+		/usr/share/qt4/mkspecs/common/linux.conf \
+		/usr/share/qt4/mkspecs/common/gcc-base.conf \
+		/usr/share/qt4/mkspecs/common/gcc-base-unix.conf \
+		/usr/share/qt4/mkspecs/common/g++-base.conf \
+		/usr/share/qt4/mkspecs/common/g++-unix.conf \
+		/usr/share/qt4/mkspecs/qconfig.pri \
+		/usr/share/qt4/mkspecs/modules/qt_phonon.pri \
+		/usr/share/qt4/mkspecs/features/qt_functions.prf \
+		/usr/share/qt4/mkspecs/features/qt_config.prf \
+		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
+		/usr/share/qt4/mkspecs/features/default_pre.prf \
+		/usr/share/qt4/mkspecs/features/debug.prf \
+		/usr/share/qt4/mkspecs/features/default_post.prf \
+		prank.pro
+QMAKE_TARGET  = prank
 DESTDIR       = 
 TARGET        = prank
-
-MANPAGES      = prank.1
 
 first: all
 ####### Implicit rules
@@ -132,11 +150,46 @@ first: all
 
 ####### Build rules
 
-
-all: Makefile $(TARGET) $(MANPAGES)
+all: Makefile $(TARGET)
 
 $(TARGET):  $(OBJECTS)  
 	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
+
+Makefile: prank.pro  /usr/share/qt4/mkspecs/linux-g++-64/qmake.conf /usr/share/qt4/mkspecs/common/unix.conf \
+		/usr/share/qt4/mkspecs/common/linux.conf \
+		/usr/share/qt4/mkspecs/common/gcc-base.conf \
+		/usr/share/qt4/mkspecs/common/gcc-base-unix.conf \
+		/usr/share/qt4/mkspecs/common/g++-base.conf \
+		/usr/share/qt4/mkspecs/common/g++-unix.conf \
+		/usr/share/qt4/mkspecs/qconfig.pri \
+		/usr/share/qt4/mkspecs/modules/qt_phonon.pri \
+		/usr/share/qt4/mkspecs/features/qt_functions.prf \
+		/usr/share/qt4/mkspecs/features/qt_config.prf \
+		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
+		/usr/share/qt4/mkspecs/features/default_pre.prf \
+		/usr/share/qt4/mkspecs/features/debug.prf \
+		/usr/share/qt4/mkspecs/features/default_post.prf
+	$(QMAKE) -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
+/usr/share/qt4/mkspecs/common/unix.conf:
+/usr/share/qt4/mkspecs/common/linux.conf:
+/usr/share/qt4/mkspecs/common/gcc-base.conf:
+/usr/share/qt4/mkspecs/common/gcc-base-unix.conf:
+/usr/share/qt4/mkspecs/common/g++-base.conf:
+/usr/share/qt4/mkspecs/common/g++-unix.conf:
+/usr/share/qt4/mkspecs/qconfig.pri:
+/usr/share/qt4/mkspecs/modules/qt_phonon.pri:
+/usr/share/qt4/mkspecs/features/qt_functions.prf:
+/usr/share/qt4/mkspecs/features/qt_config.prf:
+/usr/share/qt4/mkspecs/features/exclusive_builds.prf:
+/usr/share/qt4/mkspecs/features/default_pre.prf:
+/usr/share/qt4/mkspecs/features/debug.prf:
+/usr/share/qt4/mkspecs/features/default_post.prf:
+qmake:  FORCE
+	@$(QMAKE) -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
+
+dist: 
+	@$(CHK_DIR_EXISTS) .tmp/prank1.0.0 || $(MKDIR) .tmp/prank1.0.0 
+	$(COPY_FILE) --parents $(SOURCES) $(DIST) .tmp/prank1.0.0/ && (cd `dirname .tmp/prank1.0.0` && $(TAR) prank1.0.0.tar prank1.0.0 && $(COMPRESS) prank1.0.0.tar) && $(MOVE) `dirname .tmp/prank1.0.0`/prank1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/prank1.0.0
 
 
 clean:compiler_clean 
@@ -324,12 +377,12 @@ progressivealignment.o: progressivealignment.cpp readnewick.h \
 		translatesequences.h \
 		node.h \
 		mafft_alignment.h \
-		hirschberg.h \
+		exonerate_reads.h \
+		bppancestors.h \
+		readalignment.h \
 		phylomatchscore.h \
 		terminalsequence.h \
-		readalignment.h \
-		exonerate_reads.h \
-		bppancestors.h
+		hirschberg.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o progressivealignment.o progressivealignment.cpp
 
 prank.o: prank.cpp progressivealignment.h \
@@ -351,6 +404,12 @@ prank.o: prank.cpp progressivealignment.h \
 		translatesequences.h \
 		node.h \
 		mafft_alignment.h \
+		exonerate_reads.h \
+		bppancestors.h \
+		readalignment.h \
+		phylomatchscore.h \
+		terminalsequence.h \
+		hirschberg.h \
 		check_version.h \
 		prank.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o prank.o prank.cpp
@@ -564,14 +623,6 @@ bppancestors.o: bppancestors.cpp bppancestors.h \
 		readfile.h \
 		readnewick.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o bppancestors.o bppancestors.cpp
-
-####### Manpages
-
-%.1: %.1.pod
-	$(POD2MAN) --section=1 --name="$(shell basename $@ .1 | tr a-z A-Z)" $< >$@
-
-doc: $(MANPAGES)
-
 
 ####### Install
 
